# bicycle_power_meter

./: .gitignore  LICENSE  README.md  ble_listener.py  cps_monitor.py
app_core/: CMakeLists.txt  Kconfig.sysbuild  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf  prj_minimal.conf  sysbuild.cmake
app_core/src/: main.c
button/src/: main.c
cps_peripheral/: CMakeLists.txt  prj.conf  west.yml
cps_peripheral/boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay
cps_peripheral/inc/: algorithms.h  defines.h
cps_peripheral/include/: algorithms.h
cps_peripheral/src/: algorithms.c  algorithms.h  main.c  v2.9.0.code-workspace
net_core/: CMakeLists.txt  debug_overlay.conf  prj.conf
net_core/src/: main.c
